Display Text/build/log/idf_py_stdout_output_12088
Command: ninja all
[1/11] Performing build step for 'bootloader'
[1/1] C:\Windows\system32\cmd.exe /C "cd /D "Z:\Saeed\Workspace\Nazwi\ESP32 Projects\.Experiments\Display Text\build\bootloader\esp-idf\esptool_py" && C:\Espressif\tools\python\v5.5.3\venv\Scripts\python.exe C:/esp/v5.5.3/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 "Z:/Saeed/Workspace/Nazwi/ESP32 Projects/.Experiments/Display Text/build/bootloader/bootloader.bin""
Bootloader binary size 0x5160 bytes. 0x2ea0 bytes (36%) free.
[2/11] No install step for 'bootloader'
[3/11] Building C object esp-idf/lcd/CMakeFiles/__idf_lcd.dir/app_lcd.c.obj
[4/11] Completed 'bootloader'
[5/11] Linking C static library esp-idf\lcd\liblcd.a
[6/11] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj 
C:\Espressif\tools\xtensa-esp-elf\esp-14.2.0_20251107\xtensa-esp-elf\bin\xtensa-esp32s3-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"-128-NOTFOUND\" -DLV_CONF_INCLUDE_SIMPLE -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I"Z:/Saeed/Workspace/Nazwi/ESP32 Projects/.Experiments/Display Text/build/config" -I"Z:/Saeed/Workspace/Nazwi/ESP32 Projects/.Experiments/Display Text/main" -IC:/esp/v5.5.3/esp-idf/components/newlib/platform_include -IC:/esp/v5.5.3/esp-idf/components/freertos/config/include -IC:/esp/v5.5.3/esp-idf/components/freertos/config/include/freertos -IC:/esp/v5.5.3/esp-idf/components/freertos/config/xtensa/include -IC:/esp/v5.5.3/esp-idf/components/freertos/FreeRTOS-Kernel/include -IC:/esp/v5.5.3/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/esp/v5.5.3/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -IC:/esp/v5.5.3/esp-idf/components/freertos/esp_additions/include -IC:/esp/v5.5.3/esp-idf/components/esp_hw_support/include -IC:/esp/v5.5.3/esp-idf/components/esp_hw_support/include/soc -IC:/esp/v5.5.3/esp-idf/components/esp_hw_support/include/soc/esp32s3 -IC:/esp/v5.5.3/esp-idf/components/esp_hw_support/dma/include -IC:/esp/v5.5.3/esp-idf/components/esp_hw_support/ldo/include -IC:/esp/v5.5.3/esp-idf/components/esp_hw_support/debug_probe/include -IC:/esp/v5.5.3/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -IC:/esp/v5.5.3/esp-idf/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -IC:/esp/v5.5.3/esp-idf/components/esp_hw_support/power_supply/include -IC:/esp/v5.5.3/esp-idf/components/esp_hw_support/port/esp32s3/. -IC:/esp/v5.5.3/esp-idf/components/esp_hw_support/port/esp32s3/include -IC:/esp/v5.5.3/esp-idf/components/esp_hw_support/mspi_timing_tuning/port/esp32s3/. -IC:/esp/v5.5.3/esp-idf/components/esp_hw_support/mspi_timing_tuning/port/esp32s3/include -IC:/esp/v5.5.3/esp-idf/components/heap/include -IC:/esp/v5.5.3/esp-idf/components/heap/tlsf -IC:/esp/v5.5.3/esp-idf/components/log/include -IC:/esp/v5.5.3/esp-idf/components/soc/include -IC:/esp/v5.5.3/esp-idf/components/soc/esp32s3 -IC:/esp/v5.5.3/esp-idf/components/soc/esp32s3/include -IC:/esp/v5.5.3/esp-idf/components/soc/esp32s3/register -IC:/esp/v5.5.3/esp-idf/components/hal/platform_port/include -IC:/esp/v5.5.3/esp-idf/components/hal/esp32s3/include -IC:/esp/v5.5.3/esp-idf/components/hal/include -IC:/esp/v5.5.3/esp-idf/components/esp_rom/include -IC:/esp/v5.5.3/esp-idf/components/esp_rom/esp32s3/include -IC:/esp/v5.5.3/esp-idf/components/esp_rom/esp32s3/include/esp32s3 -IC:/esp/v5.5.3/esp-idf/components/esp_rom/esp32s3 -IC:/esp/v5.5.3/esp-idf/components/esp_common/include -IC:/esp/v5.5.3/esp-idf/components/esp_system/include -IC:/esp/v5.5.3/esp-idf/components/esp_system/port/soc -IC:/esp/v5.5.3/esp-idf/components/esp_system/port/include/private -IC:/esp/v5.5.3/esp-idf/components/xtensa/esp32s3/include -IC:/esp/v5.5.3/esp-idf/components/xtensa/include -IC:/esp/v5.5.3/esp-idf/components/xtensa/deprecated_include -IC:/esp/v5.5.3/esp-idf/components/lwip/include -IC:/esp/v5.5.3/esp-idf/components/lwip/include/apps -IC:/esp/v5.5.3/esp-idf/components/lwip/include/apps/sntp -IC:/esp/v5.5.3/esp-idf/components/lwip/lwip/src/include -IC:/esp/v5.5.3/esp-idf/components/lwip/port/include -IC:/esp/v5.5.3/esp-idf/components/lwip/port/freertos/include -IC:/esp/v5.5.3/esp-idf/components/lwip/port/esp32xx/include -IC:/esp/v5.5.3/esp-idf/components/lwip/port/esp32xx/include/arch -IC:/esp/v5.5.3/esp-idf/components/lwip/port/esp32xx/include/sys -I"Z:/Saeed/Workspace/Nazwi/ESP32 Projects/.Experiments/Display Text/components/lcd/include" -IC:/esp/v5.5.3/esp-idf/components/driver/deprecated -IC:/esp/v5.5.3/esp-idf/components/driver/i2c/include -IC:/esp/v5.5.3/esp-idf/components/driver/touch_sensor/include -IC:/esp/v5.5.3/esp-idf/components/driver/twai/include -IC:/esp/v5.5.3/esp-idf/components/driver/touch_sensor/esp32s3/include -IC:/esp/v5.5.3/esp-idf/components/esp_pm/include -IC:/esp/v5.5.3/esp-idf/components/esp_ringbuf/include -IC:/esp/v5.5.3/esp-idf/components/esp_driver_gpio/include -IC:/esp/v5.5.3/esp-idf/components/esp_driver_pcnt/include -IC:/esp/v5.5.3/esp-idf/components/esp_driver_gptimer/include -IC:/esp/v5.5.3/esp-idf/components/esp_driver_spi/include -IC:/esp/v5.5.3/esp-idf/components/esp_driver_mcpwm/include -IC:/esp/v5.5.3/esp-idf/components/esp_driver_ana_cmpr/include -IC:/esp/v5.5.3/esp-idf/components/esp_driver_i2s/include -IC:/esp/v5.5.3/esp-idf/components/esp_driver_sdmmc/include -IC:/esp/v5.5.3/esp-idf/components/sdmmc/include -IC:/esp/v5.5.3/esp-idf/components/esp_driver_sdspi/include -IC:/esp/v5.5.3/esp-idf/components/esp_driver_sdio/include -IC:/esp/v5.5.3/esp-idf/components/esp_driver_dac/include -IC:/esp/v5.5.3/esp-idf/components/esp_driver_rmt/include -IC:/esp/v5.5.3/esp-idf/components/esp_driver_tsens/include -IC:/esp/v5.5.3/esp-idf/components/esp_driver_sdm/include -IC:/esp/v5.5.3/esp-idf/components/esp_driver_i2c/include -IC:/esp/v5.5.3/esp-idf/components/esp_driver_uart/include -IC:/esp/v5.5.3/esp-idf/components/vfs/include -IC:/esp/v5.5.3/esp-idf/components/esp_driver_ledc/include -IC:/esp/v5.5.3/esp-idf/components/esp_driver_parlio/include -IC:/esp/v5.5.3/esp-idf/components/esp_driver_usb_serial_jtag/include -IC:/esp/v5.5.3/esp-idf/components/esp_driver_twai/include -IC:/esp/v5.5.3/esp-idf/components/esp_lcd/include -IC:/esp/v5.5.3/esp-idf/components/esp_lcd/interface -IC:/esp/v5.5.3/esp-idf/components/esp_lcd/rgb/include -I"Z:/Saeed/Workspace/Nazwi/ESP32 Projects/.Experiments/Display Text/components/lvgl_setup/include" -IC:/esp/v5.5.3/esp-idf/components/esp_timer/include -I"Z:/Saeed/Workspace/Nazwi/ESP32 Projects/.Experiments/Display Text/managed_components/lvgl__lvgl" -I"Z:/Saeed/Workspace/Nazwi/ESP32 Projects/.Experiments/Display Text/managed_components/lvgl__lvgl/src" -I"Z:/Saeed/Workspace/Nazwi/ESP32 Projects/.Experiments/Display Text/managed_components" -I"Z:/Saeed/Workspace/Nazwi/ESP32 Projects/.Experiments/Display Text/managed_components/lvgl__lvgl/examples" -I"Z:/Saeed/Workspace/Nazwi/ESP32 Projects/.Experiments/Display Text/managed_components/lvgl__lvgl/demos" -mlongcalls  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap "-fmacro-prefix-map=Z:/Saeed/Workspace/Nazwi/ESP32 Projects/.Experiments/Display Text=." -fmacro-prefix-map=C:/esp/v5.5.3/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -MF esp-idf\main\CMakeFiles\__idf_main.dir\main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -c "Z:/Saeed/Workspace/Nazwi/ESP32 Projects/.Experiments/Display Text/main/main.c"
Z:/Saeed/Workspace/Nazwi/ESP32 Projects/.Experiments/Display Text/main/main.c: In function 'ui_create_welcome_screen':
Z:/Saeed/Workspace/Nazwi/ESP32 Projects/.Experiments/Display Text/main/main.c:40:46: error: 'lv_font_montserrat_32' undeclared (first use in this function); did you mean 'lv_font_montserrat_28'?
   40 |     lv_obj_set_style_text_font(lbl_welcome, &lv_font_montserrat_32, LV_PART_MAIN);
      |                                              ^~~~~~~~~~~~~~~~~~~~~
      |                                              lv_font_montserrat_28
Z:/Saeed/Workspace/Nazwi/ESP32 Projects/.Experiments/Display Text/main/main.c:40:46: note: each undeclared identifier is reported only once for each function it appears in
ninja: build stopped: subcommand failed.
